feature/marvel - integrated swagger example
